# Aether

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  compose.gpu.yml  compose.yml
.github/workflows/: ci.yml
brain-node/: Cargo.toml
brain-node/src/: main.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: lib.rs  trie.rs  types.rs  wake_word.rs
crates/brain-node/: Cargo.toml  build.rs
crates/brain-node/src/: grpc.rs  history.rs  ingest.rs  integration_tests.rs  llm.rs  main.rs  mdns_adv.rs  navidrome.rs  ollama_updates.rs  pair.rs  session.rs  skills.rs  stt.rs  tts.rs  vector_store.rs
crates/brain-node/src/web_ui/: mod.rs  sse.rs  templates.rs
crates/brain-node/src/web_ui/api/: documents.rs  mod.rs  nodes.rs  settings.rs  setup.rs  skills.rs  skills_settings.rs  training.rs
crates/brain-node/src/web_ui/pages/: dashboard.rs  documents.rs  mod.rs  nodes.rs  settings.rs  setup.rs  skills.rs  skills_settings.rs  training.rs
crates/brain-node/src/web_ui/static/: app.css  app.js
crates/brain-node/src/web_ui/templates/: base.html  dashboard.html  documents.html  nodes.html  nodes_pair.html  settings_models.html  settings_skills.html  settings_tts.html  setup.html  skills.html  training_voice.html  training_wake_word.html
crates/candle-core-patch/: Cargo.toml
crates/candle-core-patch/src/: cpu_backend.rs  lib.rs
crates/edge-node/: Cargo.toml
crates/edge-node/src/: audio.rs  brain_conn.rs  device_discovery.rs  gpio.rs  integration_tests.rs  kill_signal.rs  main.rs  playback.rs  state_server.rs  wake_word.rs
docs/: wake-word-training.md
edge-node/: Cargo.toml
edge-node/src/: main.rs
finetuning/: Dockerfile  app.py  requirements.txt  train_whisper.py
proto/: aether.proto
scripts/: deploy-edge.sh  download-models.sh  train-wake-word.sh
todos/: concept-music-app.md  concept-standalone-music-app.md  epic-phase-1-audio-pipe.md  epic-phase-2-neural-engine.md  epic-phase-3-hardware-tts.md  epic-phase-4-scaling.md  epic-phase-5-web-ui.md  epic-skills-integration.md
todos/completed/: epic-phase-1-audio-pipe.md  epic-phase-2-neural-engine.md  epic-phase-3-hardware-tts.md  epic-phase-4-scaling.md  epic-phase-5-web-ui.md
