[package]
name = "brain-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brain-node"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
clap = { version = "4", features = ["derive", "env"] }
rcgen = { version = "0.13", features = ["pem"] }
mdns-sd = "0.11"
local-ip-address = "0.6"

[build-dependencies]
tonic-build = "0.12"
