[package]
name = "brain-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brain-node"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
clap = { version = "4", features = ["derive", "env"] }
rcgen = { version = "0.13", features = ["pem"] }
mdns-sd = "0.11"
local-ip-address = "0.6"
whisper-rs = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"] }
hound = "3"
# ── Web UI ────────────────────────────────────────────────────────────────────
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
minijinja = "2"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
