[package]
name = "edge-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "edge-node"
path = "src/main.rs"

[features]
# Enables the real rustpotter wake word detector.
# rustpotter 3.0.2 has a broken upstream dep (candle-core 0.2.2 + half 2.7 + rand conflict).
# Build with `--features wake-word` for production Pi builds once upstream is fixed.
wake-word = ["dep:rustpotter"]

[dependencies]
aether-core = { path = "../aether-core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
clap = { version = "4", features = ["derive", "env"] }
cpal = "0.15"
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
dirs = "5"
async-stream = "0.3"
rustpotter = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
